--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "climate-change-api",
+  "name": "nodejs-app-searchnews",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
