--- a/k8s/kind-config.yaml
+++ b/k8s/kind-config.yaml
@@ -1,15 +1,10 @@
-kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
+kind: Cluster
 nodes:
 - role: control-plane
-  kubeadmConfigPatches:
-  - |
-    kind: InitConfiguration
-    nodeRegistration:
-      kubeletExtraArgs:
-        node-labels: "ingress-ready=true"
   extraPortMappings:
-  - containerPort: 80
-    hostPort: 80
-    protocol: TCP
-
+  - containerPort: 30000
+    hostPort: 30000
+    listenAddress: 0.0.0.0
+    protocol: tcp
+- role: worker
