--- a/k8s/services.yaml
+++ b/k8s/services.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: climate-change-api
-  namespace: default
+  name: nodejs-app-searchnews
+  namespace: nodejs-app-searchnews
   labels:
-    app: climate-change-api
+    app: nodejs-app-searchnews
 spec:
   type: NodePort
   selector:
-    app: climate-change-api
+    app: nodejs-app-searchnews
   ports:
-    - name: climate-change-api
+    - name: http
       port: 8000
       targetPort: 8000
-      nodePort: 31100
+      nodePort: 30000
