--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "request": "^2.88.2",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.3",
-    "mocha": "^10.0.0" 
+    "mocha": "^10.0.0",
+    "chai": "^4.3.6"
   }
 }
