--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.3",
     "mocha": "^10.0.0",
+    "chai-http": "^4.3.0", 
     "chai": "^4.3.6"
   }
 }
