--- a/.github/workflows/app-workflow.yml
+++ b/.github/workflows/app-workflow.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     name: Build Code
     runs-on: ubuntu-latest
-    timeout-minutes: ˝
+    timeout-minutes: 3
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
