--- a/.github/workflows/app-workflow.yml
+++ b/.github/workflows/app-workflow.yml
@@ -32,5 +32,19 @@ jobs:
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
 
-      - name: Run tests
-        run: npm run test --if-present
+      # - name: Run tests
+      #   run: npm run test --if-present
+
+  output:
+    name: Output 
+    runs-on: ubuntu-latest
+    timeout-minutes: 3
+    needs: build
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+        with:
+          ref: develop
+      
+      - name: Show a message
+        run: echo "Pipeline Completed!"
