--- a/app/package.json
+++ b/app/package.json
@@ -5,15 +5,21 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "mocha"
+    "test": "mocha ../test/**/*.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "request": "^2.88.2",
-    "axios": "^0.21.1",
+    "app": "^0.1.0",
+    "axios": "^1.7.5",
     "cheerio": "^1.0.0-rc.3",
-    "mocha": "^10.0.0" 
+    "express": "^4.17.1",
+    "mocha": "^10.0.0",
+    "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "chai": "^5.1.1",
+    "mocha": "^10.0.0",
+    "chai-http": "^5.0.0"
   }
 }
