--- a/.github/workflows/app-workflow.yml
+++ b/.github/workflows/app-workflow.yml
@@ -32,7 +32,8 @@ jobs:
       
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
-        working-directory: /app
+        with:
+          working-directory: /app
 
       # - name: Run tests
       #   run: npm run test --if-present
