--- a/.github/workflows/app-workflow.yml
+++ b/.github/workflows/app-workflow.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
         with:
-          working-directory: /app
+          working-directory: ./app
 
       # - name: Run tests
       #   run: npm run test --if-present
